Delete old code, added working new code. TODO: write DXF